# textfiles

./: Cargo.toml  LICENSE  README.md  run.fish  run.sh
src/: browser.rs  fetcher.rs  main.rs  parser.rs  ui.rs
